--- a/demo/template.html
+++ b/demo/template.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div data-component="ProductColors" product="Aria®" ></div>
     <% preact.bodyEnd %>
   </body>
 </html>
