Added help icons

--- a/loader/template.html
+++ b/loader/template.html
@@ -9,7 +9,7 @@
     <% preact.headEnd %>
   </head>
   <body>
-    <div id="root"></div>
+    <div data-component="ProductColors" product="Aria®" ></div>
     <% preact.bodyEnd %>
   </body>
 </html>
