--- a/index.html
+++ b/index.html
@@ -5,9 +5,32 @@
 		<link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Vite + React + Typescript + Chakra + Cypress</title>
+		<style>
+			.preview {
+				width: 100%;
+				max-width: 1100px;
+				margin: 80px auto;
+				border: 1px dashed rgba(0, 0, 0, 0.2);
+				position: relative;
+			}
+			.preview::before {
+				content: 'WIDGET PREVIEW';
+				position: absolute;
+				display: block;
+				top: -18px;
+				font-size: 11px;
+				color: rgba(0, 0, 0, 0.5);
+			}
+		</style>
 	</head>
+
 	<body>
-		<div id="root"></div>
-		<script type="module" src="/src/index.tsx"></script>
+		<div data-widget-host="habitat" class="preview">
+			<script type="text/props">
+				{ "color": "red"}
+			</script>
+		</div>
+		<div data-component="ProductColors" product="Provence™"></div>
+		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
