--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
 			</script>
 		</div>
 		<div data-component="ProductColors" product="Provence™"></div>
-		<script
-			type="module"
-			src="https://vigorous-hamilton-5da2c7.netlify.app/assets/index.js"
-		></script>
+		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
