+Wordpress Dashboard component

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			</script>
 		</div>
 		<div data-component="ProductColors" product="Provence™"></div>
+		<div data-component="WordpressDashboard"></div>
 		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
