--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
 	<body>
 		<div data-component="WordpressDashboard"></div>
-		<script type="module" siteurl="https://playground.gsgmothership.com/" src="/src/loader.tsx"></script>
+		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
