Bundle debug html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div siteurl='https://playground.gsgmothership.com/' gsgToken="aHR0cHM6Ly9wbGF5Z3JvdW5kLmdzZ21vdGhlcnNoaXAuY29tLw" nonce='cc80882003' data-component="WordpressDashboard"></div>
+		<div data-component="WordpressDashboard"></div>
 		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
