reviving color selector

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<body>
-		<div data-component="WordpressDashboard"></div>
+		<div data-component="ProductColors" product="Florence™"></div>
 		<script type="module" src="/src/loader.tsx"></script>
 	</body>
 </html>
